<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/formsbg">

<ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/watermark"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
         />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="380dp"
        android:layout_height="500dp"
        android:layout_marginTop="-30dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        android:layout_gravity="center"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >



    <EditText
        android:id="@+id/insta"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="-170dp"
        android:background="@drawable/edittext_rounded_corners"
        android:drawableStart="@drawable/insta"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_instagarm_handel"
        android:inputType="textUri"
        android:paddingStart="12dp"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/question"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="-100dp"
        android:background="@drawable/edittext_rounded_corners"
        android:drawableStart="@drawable/baseline_volunteer_activism_24"
        android:gravity="center"
        android:paddingStart="12dp"
        android:text="@string/have_you_ever_volunteered"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.166" />

    <RadioGroup
        android:id="@+id/groupradio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="162dp"
       >

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundcorner"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/no"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundcorner"
            android:text="@string/no" />

    </RadioGroup>

    <TextView
        android:id="@+id/idTVStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_person_241"
            android:id="@+id/profilephoto"
            android:layout_marginTop="270dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shadow_button_layer_list"
            />
        <ImageView
            android:id="@+id/camera"
            android:layout_width="62dp"
            android:layout_height="41dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="330dp"
            app:srcCompat="@drawable/camera" />
        <Button
            android:id="@+id/submit"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="199dp"
            android:backgroundTint="@color/magenta"
            android:text="@string/submit"
            android:layout_marginBottom="20dp"
            />

    </androidx.cardview.widget.CardView>


</LinearLayout>
